# OpenSystem

./: README.md
src/DE/adwaita-fonts/: README.md  meson.build
src/DE/decibels/: .gitlab-ci.yml  NEWS  README.md  decibels.doap  eslint.config.mjs  meson.build  package-lock.json  package.json
src/DE/decibels/data/: drag-overlay.blp  empty.blp  error.blp  header.blp  meson.build  org.gnome.Decibels.data.gresource.xml.in  org.gnome.Decibels.desktop.in.in  org.systemuserland.Decibels.metainfo.xml.in.in  playback-rate-button.blp  player.blp  shortcuts-dialog.blp  style.css  volume-button.blp  window.blp
src/DE/decibels/gi-types/: adw1.d.ts  appstream1.d.ts  appstreamcompose1.d.ts  atk1.d.ts  atspi2.d.ts  cairo1.d.ts  cudagst1.d.ts  dex1.d.ts  gck2.d.ts  gcr3.d.ts  gcr4.d.ts  gdesktopenums3.d.ts  gdk3.d.ts  gdk4.d.ts  gi.d.ts  gio2.d.ts  giounix2.d.ts  girepository2.d.ts  girepository3.d.ts  glib2.d.ts  glibunix2.d.ts  gmodule2.d.ts  gobject2.d.ts  gsk4.d.ts  gst1.d.ts  gstallocators1.d.ts  gstanalytics1.d.ts  gstapp1.d.ts  gstaudio1.d.ts  gstbase1.d.ts  gstcodecs1.d.ts  gstcuda1.d.ts  gstdxva1.d.ts  gstgl1.d.ts  gstglegl1.d.ts  gstmpegts1.d.ts  gstmse1.d.ts  gstnet1.d.ts  gstpbutils1.d.ts  gstplay1.d.ts  (+24 more)
src/DE/decibels/po/: LINGUAS  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lt.po  nb.po  ne.po  nl.po  oc.po  pa.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+9 more)
src/DE/decibels/src/: application.ts  drag-overlay.ts  empty.ts  error.ts  header.ts  main.ts  meson.build  mpris.ts  org.systemuserland.Decibels.in  org.systemuserland.Decibels.src.gresource.xml.in  playback-rate-button.ts  player.ts  stream.ts  volume-button.ts  waveform-bar-chart.ts  waveform-generator.ts  waveform-scale.ts  window.ts
src/DE/foundry/: .gitignore  .gitlab-ci.yml  NEWS  README.md  foundry.c  foundry.doap  meson.build  meson.options
src/DE/foundry/contrib/: eggactiongroup.h  eggarrayimpl.c  eggflattenlistmodel.c  eggflattenlistmodel.h  eggmaplistmodel.c  eggmaplistmodel.h  eggrbtree.c  eggrbtreeprivate.h  line-reader-private.h  meson.build  xml-reader-private.h  xml-reader.c
src/DE/foundry/data/: app.devsuite.Foundry.metainfo.xml.in  meson.build
src/DE/foundry/doc/: meson.build
src/DE/foundry/libfoundry/: app.devsuite.foundry.xml  foundry-action-muxer.c  foundry-action-muxer.h  foundry-context-private.h  foundry-context.c  foundry-context.h  foundry-contextual-private.h  foundry-contextual.c  foundry-contextual.h  foundry-debug.h.in  foundry-gom-private.h  foundry-inhibitor-private.h  foundry-inhibitor.c  foundry-inhibitor.h  foundry-init-private.h  foundry-init.c  foundry-init.h  foundry-marshal.defs  foundry-service-private.h  foundry-service.c  foundry-service.h  foundry-string-object-private.h  foundry-string-object.c  foundry-types.h  foundry-util-private.h  foundry-util.c  foundry-util.h  foundry-version-macros.h  foundry-version.h.in  foundry.gresource.xml  foundry.h  libfoundry-config.h.in  meson.build
src/DE/foundry/libfoundry-adw/: foundry-action-responder-group-private.h  foundry-action-responder-group.c  foundry-action-responder-private.h  foundry-action-responder.c  foundry-adw-init.c  foundry-adw-init.h  foundry-adw.gresource.xml  foundry-adw.h  foundry-frame-private.h  foundry-frame.c  foundry-multi-reaction-private.h  foundry-multi-reaction.c  foundry-page-private.h  foundry-page.c  foundry-page.h  foundry-panel-bar.c  foundry-panel-bar.h  foundry-panel-bar.ui  foundry-panel-button-private.h  foundry-panel-button.c  foundry-panel-button.ui  foundry-panel.c  foundry-panel.h  foundry-property-reaction-private.h  foundry-property-reaction.c  foundry-reaction-private.h  foundry-reaction.c  foundry-responder-private.h  foundry-responder.c  foundry-search-dialog.c  foundry-search-dialog.h  foundry-search-dialog.ui  foundry-signal-responder-private.h  foundry-signal-responder.c  foundry-splitable-page.c  foundry-splitable-page.h  foundry-tree-expander.c  foundry-tree-expander.h  foundry-workspace-addin-private.h  foundry-workspace-addin.c  (+9 more)
src/DE/foundry/libfoundry-gtk/: foundry-gtk-init.c  foundry-gtk-init.h  foundry-gtk-plugin.c  foundry-gtk.gresource.xml  foundry-gtk.h  foundry-gtk.plugin  foundry-pango.c  foundry-pango.h  meson.build
src/DE/foundry/plugins/: meson.build  plugins.gresource.xml.in
src/DE/gweather-locations/: .gitlab-ci.yml  README.md  gweather-locations.doap  meson.build
src/DE/libcloudproviders/: .editorconfig  .gitlab-ci.yml  CHANGELOG  README.md  libcloudproviders.doap  meson.build  meson_options.txt
src/DE/libmks/: .editorconfig  .gitignore  .gitlab-ci.yml  .packit.yml  NEWS  README.md  libmks.doap  meson.build  meson_options.txt  org.systemuserland.libmks.mks.json
src/DE/libmks/lib/: libmks.h  (+49 more)
src/DE/libshew/: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  libshew.doap  meson.build  meson.options
src/DE/libspelling/: .gitlab-ci.yml  NEWS  README.md  libspelling.doap  meson.build  meson_options.txt
src/DE/manuals/: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  NEWS  README.md  app.devsuite.Manuals.Devel.json  manuals.doap  meson.build
src/DE/papers/: .clang-format-ignore  .editorconfig  .git-blame-ignore-refs  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  NEWS.md  README.md  TESTING.md  meson.build  meson_options.txt  papers.doap
src/DE/pipewire-media-stream/: README.md  TODO.md  com.feaneron.example.PipeWireMediaStream.json  main.c  media-stream.gresource.xml  meson.build  pipewire-media-stream.doap  pw-media-stream.c  pw-media-stream.h  window.c  window.h  window.ui
src/DE/pygobject-docs/: .codespell.txt  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  libraries.txt  pygobject-docs.doap  pyproject.toml
src/DE/systemuserland-app-list/: .gitlab-ci.yml  NEWS  README.md  meson.build
src/DE/systemuserland-browser-connector/: .gitlab-ci.yml  pyproject.toml
src/DE/systemuserland-connections/: .gitignore  meson.build
(+96347 files in other folders)
